[tool.poetry]
name = "implement-of-erudition"
version = "0.1.0"
description = ""
authors = ["Frederick.Ollinger <follinge@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
